--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-router-dom": "^6.22.3",
-    "axios": "^1.6.7",
+    "react-scripts": "5.0.1",
     "styled-components": "^6.1.8"
   },
   "scripts": {
@@ -22,6 +26,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:5001",
   "browserslist": {
     "production": [
       ">0.2%",
